--- a/package.json
+++ b/package.json
@@ -9,9 +9,17 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@chakra-ui/react": "^1.8.8",
+    "@emotion/react": "^11",
+    "@emotion/styled": "^11",
+    "@walletconnect/web3-provider": "^1.7.8",
+    "dotenv": "^16.0.0",
+    "framer-motion": "^6",
+    "moralis": "^1.5.11",
     "next": "12.1.5",
-    "react": "18.1.0",
-    "react-dom": "18.1.0"
+    "react": "^18.1.0",
+    "react-dom": "^18.1.0",
+    "react-moralis": "^1.3.5"
   },
   "devDependencies": {
     "eslint": "8.14.0",
